Updating to latest version of Ruffle

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     </head>
     <body>
         <div id='ruffle'></div>
-        <script src='https://samplereality.github.io/edtsd/ruffle.js'></script>
-        <script>
+            <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
 var swfobject = {};
 
 swfobject.embedSWF = function(url, cont, width, height){
